# ReceiptOCR

./: README.md  conftest.py  pyproject.toml
.cursor/rules/: repo.mdc
.github/workflows/: test.yml
receipt_ocr/: cli.py  utils.py
tests/: test_cli_info.py  test_cli_run.py  test_receipt_ocr.py
